# MotionCursor

./: .gitignore  .gitmodules  CMakeLists.txt  MotionCursor.sln  MotionCursor.vcxproj  MotionCursor.vcxproj.filters  README.md  main.cpp  resource.h
.github/: FUNDING.yml
assets/: MotionCursor.rc
dependencies/SDL/VisualC/SDL/: SDL.vcxproj
headers/: main_gui.h
src/: main.cpp  main_gui.cpp
